--- a/PomocZvieratam/PomocZvieratam/Properties/AndroidManifest.xml
+++ b/PomocZvieratam/PomocZvieratam/Properties/AndroidManifest.xml
@@ -10,6 +10,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
 	<uses-feature android:name="android.hardware.camera" android:required="true" />
 	<application android:label="PomocZvieratam">
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
