Finalizing application,changing style, repair drawer icons, mail, about...

--- a/PomocZvieratam/PomocZvieratam/PomocZvieratam.csproj
+++ b/PomocZvieratam/PomocZvieratam/PomocZvieratam.csproj
@@ -291,9 +291,6 @@
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_menu.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\mapMockup.png" />
-  </ItemGroup>
-  <ItemGroup>
     <AndroidResource Include="Resources\values\Colors.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -318,7 +315,13 @@
     <AndroidResource Include="Resources\drawable\ic_menu_mylocation.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\hafan.png" />
+    <AndroidResource Include="Resources\drawable\dog3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\dog1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\dog_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
