--- a/PomocZvieratam/PomocZvieratam/Properties/AndroidManifest.xml
+++ b/PomocZvieratam/PomocZvieratam/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="ANIMALRESCUESK.ANIMALRESCUESK" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.bobo.animalRescue" android:versionCode="1" android:versionName="1.0.1" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="17" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
