Application is broken and I dont know why

--- a/PomocZvieratam/PomocZvieratam/PomocZvieratam.csproj
+++ b/PomocZvieratam/PomocZvieratam/PomocZvieratam.csproj
@@ -179,7 +179,9 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\values\Strings.xml" />
+    <AndroidResource Include="Resources\values\Strings.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Icon.png" />
@@ -200,7 +202,7 @@
     </XamarinComponentReference>
     <XamarinComponentReference Include="xamandroidsupportdesign">
       <Visible>False</Visible>
-      <Version>23.1.1.1</Version>
+      <Version>24.2.1.0</Version>
     </XamarinComponentReference>
   </ItemGroup>
   <ItemGroup>
